fix gap

--- a/src/components/MazeDelete.module.css
+++ b/src/components/MazeDelete.module.css
@@ -2,6 +2,7 @@
   width: 8.2rem;
   text-align: center;
   border: 1px solid #fff;
+  margin-bottom: 2rem;
   padding-top: .7rem;
   padding-bottom: .7rem;
   padding-left: .3rem;
