--- a/src/components/MazeDetail.module.css
+++ b/src/components/MazeDetail.module.css
@@ -6,6 +6,7 @@ h3, p {
   width: 8.2rem;
   text-align: center;
   border: 1px solid #fff;
+  margin-bottom: 2rem;
   padding-top: .7rem;
   padding-bottom: 1rem;
   padding-left: .3rem;
