--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -45,6 +45,6 @@
   max-width: 97%;
   margin: 0 auto;
   justify-content: space-evenly;
-  gap: 3rem 3rem;
+  gap: 1rem 3rem;
 }
 
